fix: removed unneeded font declarations and added text overflow/ellipses

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,6 @@
 
 .page {
   background: #000000;
-  font-family: "Inter", Arial, sans-serif;
-  margin: 45px 0 60px 0;
+  font-family: "Inter", "Arial", "sans-serif";
+  margin: 45px auto 60px auto;
 }
