--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,10 +1,12 @@
 .place__title {
-  font-family: Inter;
-  font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   margin: 0;
   padding: 0;
   color: #000000;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
 }
